sitepreview/trust/v1.3.0/Requirements-RetrievePKIMaterialDID.md
# Retrieve PKI material as DID - WHO SMART Trust v1.3.0

* [**Table of Contents**](toc.md)
* [**Indices**](indices.md)
* [**Artifact Index**](artifacts.md)
* **Retrieve PKI material as DID**

## Requirements: Retrieve PKI material as DID (Experimental) 

| | |
| :--- | :--- |
| *Official URL*:http://smart.who.int/trust/Requirements/RetrievePKIMaterialDID | *Version*:1.3.0 |
| Active as of 2025-10-27 | *Computable Name*:Retrieve Public Keys as DID |

 
Retrieve PKI material from a distribution point as DID 

* Publisher: Contact Email
  * [WHO](http://who.int): No contact email has been registered.
* Publisher: Jurisdiction
  * [WHO](http://who.int): 
* Publisher: Statements
  * [WHO](http://who.int): 
* Publisher: Derived from
  * [WHO](http://who.int): This requirement is not derived from another requriement.
* Publisher: Derivatives
  * [WHO](http://who.int): This requirement has the following derivatives:
* Publisher: Participating Actors
  * [WHO](http://who.int): * [Trust Network Participant](ActorDefinition-TrustNetworkParticipant.md)
* [Trust Network Anchor](ActorDefinition-TrustNetworkAnchor.md)


